# cosection

./: .gitmodules  CMakeLists.txt  README.md  eval_meshes.m  generate_cvpr_images.sh  generate_cvpr_videos.sh  num_eval.sh  run_cosection.sh
apps/: CMakeLists.txt  Co-Section.cpp  renderdata.cpp  renderdata.py
config/: cosection_baseline.cfg  cosection_full.cfg  cosection_hull.cfg  cosection_inter.cfg
data/: car_ref.off  truck_ref.off  truck_ref.ply
data/car4_poses/: view_pose1.txt  view_pose2.txt
data/place-items_poses/: view_pose1.txt  view_pose2.txt  view_pose_teddy.txt  view_pose_teddy2.txt
data/sliding-clock_poses/: view_pose1.txt  view_pose2.txt
include/CoSection/optim/: CoSection.h  ObjOptSDF.h  OptSDF.h  data.h
include/CoSection/optim/cuda/: CoSection.cuh  OptSDF.cuh
src/: CMakeLists.txt
src/optim/: CoSection.cpp  ObjOptSDF.cpp  OptSDF.cpp
src/optim/cuda/: CoSection.cu  OptSDF.cu
